[gd_scene load_steps=4 format=3 uid="uid://c0hpgpv7rfyk4"]

[ext_resource type="Script" path="res://scenes/oldvol.gd" id="1_q03l2"]

[sub_resource type="Gradient" id="1"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="2"]
gradient = SubResource("1")

[node name="VolumeControl" type="ColorRect"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
color = Color(0.145098, 0.145098, 0.164706, 0.607843)
script = ExtResource("1_q03l2")

[node name="ChangeSound" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="Bars" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Specifics" type="HBoxContainer" parent="Bars"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Music" type="VBoxContainer" parent="Bars/Specifics"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureProgress" type="TextureProgressBar" parent="Bars/Specifics/Music"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
value = 100.0
fill_mode = 3
nine_patch_stretch = true
texture_under = SubResource("2")
texture_progress = SubResource("2")
tint_under = Color(0.0352941, 0.0352941, 0.0352941, 0.490196)
tint_progress = Color(0, 0.505882, 1, 1)

[node name="Percentage" type="Label" parent="Bars/Specifics/Music"]
layout_mode = 2
theme_type_variation = &"FontRegular015"
text = "100"

[node name="Label" type="Label" parent="Bars/Specifics/Music"]
layout_mode = 2
theme_type_variation = &"FontBlack20"
text = "MUSIC"

[node name="SFX" type="VBoxContainer" parent="Bars/Specifics"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureProgress" type="TextureProgressBar" parent="Bars/Specifics/SFX"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
value = 100.0
fill_mode = 3
nine_patch_stretch = true
texture_under = SubResource("2")
texture_progress = SubResource("2")
tint_under = Color(0.0352941, 0.0352941, 0.0352941, 0.490196)
tint_progress = Color(0, 0.505882, 1, 1)

[node name="Percentage" type="Label" parent="Bars/Specifics/SFX"]
layout_mode = 2
theme_type_variation = &"FontRegular015"
text = "100"

[node name="Label" type="Label" parent="Bars/Specifics/SFX"]
layout_mode = 2
theme_type_variation = &"FontBlack20"
text = "SFX"

[node name="Master" type="VBoxContainer" parent="Bars"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="TextureProgress" type="TextureProgressBar" parent="Bars/Master"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
value = 100.0
fill_mode = 3
nine_patch_stretch = true
texture_under = SubResource("2")
texture_progress = SubResource("2")
tint_under = Color(0.0352941, 0.0352941, 0.0352941, 0.490196)
tint_progress = Color(0, 0.505882, 1, 1)

[node name="Percentage" type="Label" parent="Bars/Master"]
layout_mode = 2
theme_type_variation = &"FontRegular022"
text = "100"

[node name="Label" type="Label" parent="Bars/Master"]
layout_mode = 2
theme_type_variation = &"FontBlack28"
text = "MASTER"

[connection signal="mouse_entered" from="Bars/Specifics/Music" to="." method="change_channel" binds= [1]]
[connection signal="mouse_entered" from="Bars/Specifics/SFX" to="." method="change_channel" binds= [2]]
[connection signal="mouse_entered" from="Bars/Master" to="." method="change_channel" binds= [0]]
